# linux_serial_port

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt
